[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Characters/Character_2/Character_2_Sprite.png" type="Texture" id=1]
[ext_resource path="res://Characters/NPCs/Character_2.gd" type="Script" id=2]
[ext_resource path="res://Characters/NPCs/PlayerDetectionZone.tscn" type="PackedScene" id=3]
[ext_resource path="res://Characters/NPCs/Character_2_Sprite.gd" type="Script" id=4]
[ext_resource path="res://Characters/NPCs/PlayerDetectionZone_2.gd" type="Script" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 16.0
height = 0.0

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 6 ]
}

[sub_resource type="Animation" id=7]
resource_name = "run_backward"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 9 ]
}

[sub_resource type="Animation" id=9]
resource_name = "run_forward"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "run_left"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 3 ]
}

[sub_resource type="Animation" id=4]
resource_name = "run_right"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 6 ]
}

[node name="Character_2" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Character_2" type="Sprite" parent="."]
position = Vector2( 0, -24 )
texture = ExtResource( 1 )
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8 )
shape = SubResource( 1 )

[node name="PlayerDetectionZone_2" parent="." instance=ExtResource( 3 )]
script = ExtResource( 5 )

[node name="CollisionShape2D" parent="PlayerDetectionZone_2" index="0"]
modulate = Color( 0.980392, 0.243137, 0.243137, 0.32549 )
position = Vector2( 0, -8 )

[node name="Timer" type="Timer" parent="."]

[node name="Character_2_Animation" type="AnimationPlayer" parent="."]
root_node = NodePath("../Character_2")
anims/RESET = SubResource( 3 )
anims/run_backward = SubResource( 7 )
anims/run_forward = SubResource( 9 )
anims/run_left = SubResource( 5 )
anims/run_right = SubResource( 4 )

[connection signal="text_dict" from="." to="Character_2" method="_on_Character_2_text_dict"]

[editable path="PlayerDetectionZone_2"]
